            invoke methods on objects, so you don't need to create an 
            implementation class each time you just want to invoke a method from 
            a button or menu on the plugin.
          * Added ComponentFactory frameworks for Swing Components and editable
            Swing Components (fields).
          * Added the new Open File, Open Project and Open Recent menus.
 
 2007-09-17 beckerl <becker.larry@gmail.com>
          * Added mouse wheel zooming to the PanTool. 
            com.vividsolutions.jump.workbench.ui.zoom.PanTool.java
            com.vividsolutions.jump.workbench.ui.LayerViewPanel.java
          * Added the SelectablePlugIn to control selectability of layers.
            Moved Layer Properites below Selectable menu item.
            com.vividsolutions.jump.workbench.ui.plugin.SelectablePlugIn.java
            org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.java
            com.vividsolutions.jump.workbench.JUMPConfiguration.java
            Language file entries have been made.
          
2007-09-17 paul_d_austin <paul.austin@revolsys.com
        * Improved the windows and UNIX startup scripts

2007-09-13 paul_d_austin <paul.austin@revolsys.com
        * Fixed conf directory location in openjump.sh and removed batik sub dir

2007-09-11 beckerl <becker.larry@gmail.com>
          * Added the LayerPropertiesPlugIn which adds a menu item
            "Layer Properties" to the Layer Name popup menu.  This
            feature will display layer information such as name, number
            of features, number of points, number of attributes, geometry type,
            DataSource class, and source path.  It works on single or multiple
            layer selections.  It also includes a transparency adjustment slider
            that works for layer selections.
            Language file entries have been made.  Only German translation is done.
            org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.java
            